--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-streamlit==1.32.0
-tensorflow==2.13.0
-numpy==1.24.3
-pillow==10.2.0
-pandas==2.0.3
+streamlit
+tensorflow==2.20.0
+numpy
+pillow
+pandas
